--- a/src/app/pages/account-page/post/post.component.scss
+++ b/src/app/pages/account-page/post/post.component.scss
@@ -4,7 +4,6 @@
   gap: 16px;
   border: 1px solid var(--grey-color);
   border-radius: 2px;
-  margin-bottom: 20px;
   padding: 16px;
 }
 
