--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,8 +27,8 @@ body {
 
 .medium-text {
   font-family: "JetBrainsMono", sans-serif;
-  font-size: 12px;
-  font-weight: 400;
+  font-size: 14px;
+  font-weight: 300;
   line-height: 16px;
 }
 
